--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -104,7 +104,7 @@ Deadline: November 27, 11:59pm
 Download: [html file](./assignments/assignment04.html) | [cont.csv dataset](./data/cont.csv)
 
 Key: 
-<!-- [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R) -->
+[doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R) 
 
 
 ## 3.5. Final
