--- a/slides/EDUC641_17_critiques.Rmd
+++ b/slides/EDUC641_17_critiques.Rmd
@@ -344,7 +344,7 @@ Assume that we find that average national life expectancy is significantly great
 * **B.** There is a 3% probability that the results are due to sampling idiosyncrasy, rather than a true relationship in the population.
 * **C.** A statistically significant difference means higher income-levels yield higher life expectancies.
 * **D.** The observed data would occur 3% of the time if the null hypothesis were true.
-* **E.** Previous research found that in 2005, income-level was not related to average life expectancy (*p* = .17). Therefore, income-level is more stronyl related to life expectancy in 2015 than in 2005.
+* **E.** Previous research found that in 2005, income-level was not related to average life expectancy (*p* = .17). Therefore, income-level is more strongly related to life expectancy in 2015 than in 2005.
 * **F.** Another research group finds a statistically significant difference between countries with socialized medicine compared to those without (*p* = .001). Their smaller *p* value means that socialized medicine is more effective at increasing life expectancy than income level.
 ]
 
@@ -549,11 +549,14 @@ print(bayes)
 # Why not Bayes?
 
 .large[
-1. Selecting a prior can be **subjective**
-2. Difficulty in finding informative prior
-3. Disputes over value of uninformative priors
-4. Similarity in results across approaches
-5. Stasis
+1. If you're going to translate research into practice or policy, you actually do need to make a binary decision
+    + Yes/No we should do this thing; this clinical practice is (is not) better than this one
+    + Once you port the Bayesian framework over into this binary decision world, many of the same NHST concerns re-surface
+2. Selecting a prior can be **subjective**
+3. Difficulty in finding informative prior
+4. Disputes over value of uninformative priors
+5. Similarity in results across approaches
+6. Stasis
 ]
 
 .large[.red[**Much more complexity to be explored in another course**]]
