--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -43,7 +43,7 @@ Deadline: October 9, 11:59pm
 Download: [html file](./assignments/assignment01.html) | [cat.csv dataset](./data/cat.csv)
 
 Key: 
-[doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R)
+<!-- [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R) -->
 
 ## 3.2. Assignment 2 
 
@@ -66,7 +66,7 @@ Deadline: October 20, 11:59pm
 Download: [html file](./assignments/assignment02.html) | [cat.csv dataset](./data/cat.csv)
 
 Key: 
-[doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R)
+<!-- [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R) -->
 
 ## 3.3. Assignment 3 
 
@@ -85,7 +85,7 @@ Deadline: November 9, 11:59pm
 Download: [html file](./assignments/assignment03.html) | [cont.csv dataset](./data/cont.csv)
 
 Key: 
-[doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R)
+<!-- [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R) -->
 
 ## 3.4. Assignment 4 
 
@@ -104,7 +104,7 @@ Deadline: November 27, 11:59pm
 Download: [html file](./assignments/assignment04.html) | [cont.csv dataset](./data/cont.csv)
 
 Key: 
-[doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R) 
+<!-- [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R) -->
 
 
 ## 3.5. Final
