--- a/index.Rmd
+++ b/index.Rmd
@@ -22,11 +22,12 @@ knitr::opts_chunk$set(
 This course provides a first introduction to quantitative data analysis in education and the social sciences. It is part of a three course sequence intended to provide a toolkit of statistical concepts, methods and their implementation to producers of applied research in education and other social sciences. The course is organized around the principle that research design depends in part on researchers' substantive questions and their quantitative data available to answer these question. In this introductory course, we will focus on describing categorical and continuous data and quantifying the relationship between categorical and continuous data. Students will form a solid foundation for frequentist, inferential statistics (and some of critiques of this model). The course seeks to blend a conceptual, mathematical and applied understanding of basic statistical concepts. At the core of our pedagogical approach is the belief that students learn statistical analysis by **doing** statistical analysis. *This course (or substitute) is a pre-requisite for EDUC 643*.
 
 # Meeting time and location
-- *Class:* Tuesdays and Thursdays, 4:00pm - 5:20pm, HEDCO 142
-- *Lab:* Wednesdays, 4:00p - 4:50p, Lokey 115; Thursdays, 5:30p - 6:20p, HEDCO 142
+- *Class:* Tuesdays and Thursdays, 4:00pm - 5:20pm, Lokey 176
+- *Lab:* Wednesdays, 4:00p - 4:50p, HEDCO 146; Thursdays, 5:30p - 6:20p, Lokey 176
 
 # Instructors
-- David D. Liebowitz (office hours: Thursdays, 9 - 10:30 Lokey 102S or [Zoom](https://uoregon.zoom.us/j/6336067468))
-- Havisha Khurana
+- David D. Liebowitz (office hours: Thursdays, 2 - 3:30 Lokey 102S or [Zoom](https://uoregon.zoom.us/j/6336067468))
 - Brittany Spinner
+- Havisha Khurana
+
 
