--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -35,7 +35,7 @@ Readings:
 Lectures:
 
 - Class 1 (9/26) slides: [html](./slides/EDUC641_1_intro.html) | [pdf](./slides/EDUC641_1_intro.pdf)
-- Class 2 (9/28) slides: [html](./slides/EDUC641_2_measures.html) | [pdf](./slides/EDUC641_2_measures.pdf)
+<!-- - Class 2 (9/28) slides: [html](./slides/EDUC641_2_measures.html) | [pdf](./slides/EDUC641_2_measures.pdf) -->
 - R Tutorial slides: [html](./slides/tutorial.html)
 
 
@@ -174,13 +174,14 @@ Objectives:
 
 Readings: 
 
-- Complete **prior to Nov. 20**: [LSWR Chapter 15.1 and 15.2](https://learningstatisticswithr.com/lsr-0.6.pdf)
+- Complete **prior to Nov. 21** class: [LSWR Chapter 15.1 and 15.2](https://learningstatisticswithr.com/lsr-0.6.pdf)
 
++ **No class on 11/26 and 11/28 (University holiday)**
+  
 Lecture slides: 
 
 <!--
 - Class 13 (11/7) slides: [html](./slides/EDUC641_13_continuousrel.html) | [pdf](./slides/EDUC641_13_continuousrel.pdf)
-  + **No class on 11/9 (David traveling for conference)**
 - Class 14 (11/14) slides: [html](./slides/EDUC641_14_regression.html) | [pdf](./slides/EDUC641_14_regression.pdf)
 - Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_15_regression2.html) | [pdf](./slides/EDUC641_15_regression2.pdf) 
   + **No class on 11/23 (university holiday)**
