post class 3 slides/materials

--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -61,12 +61,12 @@ Readings:
 - Complete **prior to Oct. 10** class: [LSWR Chapter 6](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Evans 2020](https://www.newstatesman.com/uncategorized/2020/07/ra-fisher-and-science-hatred); alternate source for [Evans](./assignments/evans_2020.pdf)
 
 Lectures: 
-<!--
+
 - Class 3 (10/3) slides: [html](./slides/EDUC641_3_categdescr.html) | [pdf](./slides/EDUC641_3_categdescr.pdf)
 - Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty_codebook.pdf)
 - R code: [R script](./slides/EDUC641_3_code.R)
-- Lab activities: [doc](./labs/Lab2.docx)
--->
+<!-- - Lab activities: [doc](./labs/Lab2.docx) -->
+
 
 Assignment 1: 
 
