add Havi office hour sign up

--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -25,7 +25,7 @@ This course provides a first introduction to quantitative data analysis in educa
 # Instructors
 - David D. Liebowitz (office hours: Thursdays, 2 - 3:30 Lokey 102S or [Zoom](https://uoregon.zoom.us/j/6336067468))
 - Brittany Spinner
-- Havisha Khurana
+- Havisha Khurana (office hour [signup](https://outlook.office365.com/book/educ641_officehour_havi@uoregon.edu/))
 
 # Student Learning Outcomes
 By the end of this term, it is expected that students will be able to:
