--- a/index.Rmd
+++ b/index.Rmd
@@ -28,6 +28,6 @@ This course provides a first introduction to quantitative data analysis in educa
 # Instructors
 - David D. Liebowitz (office hours: Thursdays, 2 - 3:30 Lokey 102S or [Zoom](https://uoregon.zoom.us/j/6336067468))
 - Brittany Spinner
-- Havisha Khurana
+- Havisha Khurana (office hour [signup](https://outlook.office365.com/book/educ641_officehour_havi@uoregon.edu/))
 
 
