--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -42,9 +42,8 @@ Deadline: October 14, 11:59pm
 
 Download: [html file](./assignments/assignment01.html) | [cat.csv dataset](./data/cat.csv)
 
-<!--
 Key: 
- [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R) -->
+ [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R)
 
 ## 3.2. Assignment 2 
 
@@ -64,9 +63,9 @@ Objectives of this assignment:
 
 Deadline: October 25, 11:59pm
 
-<!-- Download: [html file](./assignments/assignment02.html) | [cat.csv dataset](./data/cat.csv)
+Download: [html file](./assignments/assignment02.html) | [cat.csv dataset](./data/cat.csv)
 
-Key: 
+<!-- Key: 
  [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R) -->
 
 ## 3.3. Assignment 3 
