--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -134,13 +134,14 @@ Readings:
 
 Lecture slides: 
 
-<!--
 - Classes 7-8 (10/17 & 10/19) slides: [html](./slides/EDUC641_7_continuousdescr.html) | [pdf](./slides/EDUC641_7_continuousdescr.pdf)
+<!--
 - Class 9 (10/24) slides: [html](./slides/EDUC641_9_transformations.html) | [pdf](./slides/EDUC641_9_transformations.pdf)
 - Classes 10-12 (10/26, 10/31, & 11/2) slides: [html](./slides/EDUC641_10_inference.html) | [pdf](./slides/EDUC641_10_inference.pdf)
+-->
 
 - Data: [life_expectancy.csv](./data/life_expectancy.csv) | [codebook](./data/life_expectancy_codebook.pdf)
-- R code: [Class 7 script](./slides/EDUC641_7_code.R) | [Class 9 script](./slides/EDUC641_9_code.R)
+- R code: [Class 7 script](./slides/EDUC641_7_code.R) <!-- | [Class 9 script](./slides/EDUC641_9_code.R)
 - Lab activities: [Week 5 lab](./labs/Lab5.docx) | [Week 6 lab](./labs/Lab6.docx) | [Week 7 lab](./labs/Lab7.docx)
 -->
 
