--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -65,8 +65,7 @@ Deadline: October 25, 11:59pm
 
 Download: [html file](./assignments/assignment02.html) | [cat.csv dataset](./data/cat.csv)
 
-<!-- Key: 
- [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R) -->
+Key: [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R)
 
 ## 3.3. Assignment 3 
 
@@ -82,8 +81,9 @@ Objectives of this assignment:
 
 Deadline: November 7, 11:59pm
 
-<!-- Download: [html file](./assignments/assignment03.html) | [cont.csv dataset](./data/cont.csv)
+Download: [html file](./assignments/assignment03.html) | [cont.csv dataset](./data/cont.csv)
 
+<!--
 Key: 
  [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R) -->
 
