--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -83,9 +83,9 @@ Deadline: November 8, 4:59pm
 
 Download: [html file](./assignments/assignment03.html) | [cont.csv dataset](./data/cont.csv)
 
-<!--
+
 Key: 
- [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R) -->
+ [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R)
 
 ## 3.4. Assignment 4 
 
@@ -101,8 +101,9 @@ Objectives of this assignment:
 
 Deadline: December 2, 11:59pm
 
-<!-- Download: [html file](./assignments/assignment04.html) | [cont.csv dataset](./data/cont.csv)
+Download: [html file](./assignments/assignment04.html) | [cont.csv dataset](./data/cont.csv)
 
+<!-- 
 Key: 
  [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R) -->
 
