--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -173,14 +173,15 @@ Readings:
   
 Lecture slides: 
 
-<!--
 - Class 13 (11/7) slides: [html](./slides/EDUC641_13_continuousrel.html) | [pdf](./slides/EDUC641_13_continuousrel.pdf)
+
+<!--
 - Class 14 (11/14) slides: [html](./slides/EDUC641_14_regression.html) | [pdf](./slides/EDUC641_14_regression.pdf)
-- Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_15_regression2.html) | [pdf](./slides/EDUC641_15_regression2.pdf) 
-  + **No class on 11/23 (university holiday)**
+- Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_15_regression2.html) | [pdf](./slides/EDUC641_15_regression2.pdf) -->
 
 - Data:  [life_expectancy.csv](./data/life_expectancy.csv)
 - R code: [R script](./slides/EDUC641_13_code.R)
+<!--
 - Lab activities: [Week 8 Lab](./labs/Lab8.docx) | [Week 9 Lab](./labs/Lab9.docx)
 
 -->
@@ -189,10 +190,9 @@ Assignment 4:
 
 - Due Dec. 2, 11:59pm 
 
-<!--
  - [html file](./assignments/assignment04.html)
  - [cont.csv](./data/cont.csv)
--->
+
 
 ## Unit 5
 
