--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -94,7 +94,6 @@ Readings:
 
 Lectures:
 
-
 - Classes 4-5 (10/10 and 10/15) slides: [html](./slides/EDUC641_4_categrel.html) | [pdf](./slides/EDUC641_4_categrel.pdf)
 - Class 6 (10/17) slides: [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf)
 - Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty_codebook.pdf) 
@@ -139,8 +138,7 @@ Lecture slides:
 - Classes 10-12 (10/31, 11/5, & 11/7) slides: [html](./slides/EDUC641_10_inference.html) | [pdf](./slides/EDUC641_10_inference.pdf)
 - Data: [life_expectancy.csv](./data/life_expectancy.csv) | [codebook](./data/life_expectancy_codebook.pdf)
 - R code: [Class 7 script](./slides/EDUC641_7_code.R) | [Class 9 script](./slides/EDUC641_9_code.R)
-
-- Lab activities: [Week 5 lab](./labs/Lab5.docx) | [Week 6 lab](./labs/Lab6.docx) <!-- | [Week 7 lab](./labs/Lab7.docx) -->
+- Lab activities: [Week 5 lab](./labs/Lab5.docx) | [Week 6 lab](./labs/Lab6.docx)
 
 Assignment 3: 
 
@@ -173,25 +171,21 @@ Readings:
   
 Lecture slides: 
 
-- Class 13 (11/7) slides: [html](./slides/EDUC641_13_continuousrel.html) | [pdf](./slides/EDUC641_13_continuousrel.pdf)
-
+- Class 13 (11/12) slides: [html](./slides/EDUC641_13_continuousrel.html) | [pdf](./slides/EDUC641_13_continuousrel.pdf)
 <!--
 - Class 14 (11/14) slides: [html](./slides/EDUC641_14_regression.html) | [pdf](./slides/EDUC641_14_regression.pdf)
 - Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_15_regression2.html) | [pdf](./slides/EDUC641_15_regression2.pdf) -->
-
 - Data:  [life_expectancy.csv](./data/life_expectancy.csv)
 - R code: [R script](./slides/EDUC641_13_code.R)
 <!--
 - Lab activities: [Week 8 Lab](./labs/Lab8.docx) | [Week 9 Lab](./labs/Lab9.docx)
-
 -->
 
 Assignment 4: 
 
 - Due Dec. 2, 11:59pm 
-
- - [html file](./assignments/assignment04.html)
- - [cont.csv](./data/cont.csv)
+- [html file](./assignments/assignment04.html)
+- [cont.csv](./data/cont.csv)
 
 
 ## Unit 5
